--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     />
+    <!-- Google verfication -->
+    <meta
+      name="google-site-verification"
+      content="QhUkJ5iH7FM4Lp4g3P62cQYEr2tx2Uf8WWt8FzQIby0"
+    />
     <!-- Auto remove cache -->
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="expires" content="0" />
